--- a/styles.css
+++ b/styles.css
@@ -1,172 +1,182 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+
 body {
-    background-color:#20110c;
-    background-size: 15%;
-    background-repeat: repeat-y;
-    background-position: center;
-    color: #000000; 
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    border: #cacaca;
-    border-radius: 10px;
-    border-width: 50px;
+  background-color: #0c0c0c;
+  /* background-size: 15%; */
+  font-family: "Poppins", arial;
+  /* background-repeat: repeat-y; */
+  /* background-position: center; */
+  color: #000000;
+  font-family: Poppins;
+  margin: 0;
+  padding: 0;
 }
 
 header {
-    background-color:#20110c; 
-    padding: 20px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    position: relative;
+}
+.LOGO {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 20px;
+}
+.logo {
+  width: 100px;
+  background: none;
+  margin-top: 20px;
 }
 
-.nav-links {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-    display: flex;
-    gap: 20px;
-}
-
-.nav-links li {
-    display: inline;
-}
-
-.nav-links a {
-    color: #ffffff;
-    text-decoration: none;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-size: 1.2em;
-    transition: color 0.3s;
-    font-weight: bold;
-}
-
-.nav-links a:hover {
-    color: #cacaca;
-}
-
-#logo {
-    width: 200px;
-    height: auto;
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
-}
-
-h1, h2 {
-    font-family: 'Poppins', sans-serif;
-    color: #e9dbab; 
-    margin: 0;
-    font-weight: bold;
-
-    text-align: center;
+h1,
+h2 {
+  color: #e9dbab;
+  margin: 0;
+  font-weight: bold;
+  text-shadow: 4px 9px 9px #000000;
+  text-align: center;
 }
 
 h1 {
-    font-size: 2.5em;
+  font-size: 2.5em;
 }
 
 h2 {
-    font-size: 1.5em;
-    margin-top: 20px;
+  font-size: 1.5em;
+  margin-top: 0px;
 }
 
 h4 {
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif, Times, serif;
-    color: #cacaca; 
-    margin: 0;
-    font-size: 1.4em;
+  color: #cacaca;
+  margin: 0;
+  font-size: 1.4em;
 
-    text-align: center;
-}
-#bar1 {
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif, Times, serif;
-    color: #cacaca; 
-    margin: 0;
-    font-size: 1.4em;
-    text-shadow: 4px 9px 9px #4e4949; 
-    text-align: left;
-    padding-left: 20px;
-    padding-right: 20px;
-    padding-top: 5px;
-    padding-bottom: 5px;
-    text-align: justify;
-    line-height: 1.8;
-    text-decoration: none;
-    transition: color 0.3s;
-    transition: background-color 0.3s;
-    transition: font-size 0.3s;
-}
-
-#bar2 {
-    color: #ffffff;
-    
-    
- 
-    font-weight: bolder;
-
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-weight: 550;
-    font-size: 17px;
-    padding-left: 20px;
-    padding-right: 20px;
-    padding-top: 5px;
-    padding-bottom: 5px;
-    
-    text-align: justify;
-    line-height: 1.8;
-    text-decoration: none;
+  text-align: center;
 }
 
 .about {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 80vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-top: 50px;
 }
 
 .projects {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    padding: 20px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  padding: 0;
+  margin-top: 50px;
+  margin-bottom: 20px;
+  margin-left: 70px;
+  margin-right: 70px;
 }
 
 .project {
-    margin: 15px; 
-    border: 2px solid #000000; 
-    border-radius: 5px;
-    overflow: hidden;
-    width: 330px;
-    transition: transform 0.1s;
+  margin: 15px;
+  box-shadow: 0 0 10px #00000081;
+  border-radius: 5px;
+  overflow: hidden;
+  width: 330px;
+  transition: transform 0.1s, filter 0.3s;
 }
 
 .project:hover {
-    transform: scale(1.10);
+  box-shadow: none;
+  transform: scale(1.3);
+  z-index: 100;
+}
+
+/* .projects:hover .project{
+    filter: grayscale(1) blur(2px);
+}
+.projects:hover .project:hover{
+    filter: none;
+} */
+.projects:hover .project:not(:hover) {
+  filter: grayscale(1) blur(2px);
+}
+.project:not(:hover) {
+  filter: none;
 }
 
 .project img,
 .project video {
+  width: 100%;
+  height: auto;
+}
+
+.ITSELF {
+  text-transform: uppercase;
+  color: #cacaca;
+  margin: 0;
+  font-size: 30px;
+  padding-left: 7px;
+  padding-right: 7px;
+
+  line-height: 1.8;
+  text-decoration: none;
+  transition: color 0.3s;
+  transition: background-color 0.3s;
+  transition: all 0.3s;
+}
+.A-div {
+  display: flex;
+  justify-content: left;
+  text-align: center;
+
+  position: fixed;
+  background-color: #0c0c0c;
+}
+.ITSELF:hover {
+  text-shadow: 4px 9px 9px rgba(78, 73, 73, 0.342);
+  transform: scale(1.1);
+}
+footer{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #0c0c0c;
+    color: #e9dbab;
+
+    text-align: center;
+    position: fixed;
+    bottom: 0;
     width: 100%;
-    height: auto;
+    left: 0;
+}
+footer p {
+  margin: 0;
+
+  font-size: 0.8em;
 }
 
-.scrollbar {
-    overflow-y: scroll;
-    height: 80vh;
-}
+@media screen and (max-width: 1024px) {
+  body {
+    margin-top: 60px;
+  }
+  h1,
+  h2 {
+    font-size: 1.5em;
+  }
 
-.scrollbar::-webkit-scrollbar {
-    width: 10px;
-}
+  h4 {
+    font-size: 1em;
+  }
 
-.scrollbar::-webkit-scrollbar-thumb {
-    background: #140104; 
-    border-radius: 5px;
-}
-
-.scrollbar::-webkit-scrollbar-track {
-    background: #f1f1f1; 
+  .A-div {
+    
+    justify-content: center;
+    margin-bottom: 10px;
+    margin-left: 0;
+    top: 0;
+    text-align: center;
+  }
+  .LOGO {
+  }
+  .ITSELF {
+    font-size: 23px;
+    
+  }
+  .logo {
+    width: 80px;
+  }
 }
